Adding the updated main_test file

--- a/main_test.html
+++ b/main_test.html
@@ -57,8 +57,26 @@
         renderer.setClearColor(new THREE.Color('skyblue'));
 
         // Synthesizer setup
-        const synth = new Tone.Synth().toDestination();
+        // const synth = new Tone.PolySynth(Tone.Synth).toDestination();
+        // const synth = new Tone.NoiseSynth().toDestination();
+        // const synth = new Tone.Synth().toDestination();
+        // const synth = new Tone.AMSynth().toDestination();
+        // const synth = new Tone.FMSynth().toDestination();
+        const synth = new Tone.DuoSynth().toDestination();
+        // const synth = new Tone.MonoSynth().toDestination();
 
+        
+        
+
+        // effects
+        const reverb = new Tone.Reverb(1.5).toDestination();
+        const delay = new Tone.FeedbackDelay("8n", 0.5).toDestination();
+        const chorus = new Tone.Chorus(4, 2.5, 0.5).toDestination();
+        const autoWah = new Tone.AutoWah({ baseFrequency: 100, octaves: 6 }).toDestination();
+        const distortion = new Tone.Distortion(0.2).toDestination();
+
+        // effect chain
+        synth.chain(chorus, delay, reverb, autoWah, distortion, Tone.Destination);
         // Load texture
         const textureLoader = new THREE.TextureLoader();
         const synthTexture = textureLoader.load('./static/textures/Plastic005_1K-JPG_Color.jpg');
